--- a/src/custom-components/survey-list/survey-list.html
+++ b/src/custom-components/survey-list/survey-list.html
@@ -12,7 +12,7 @@
         <span *ngIf="!areSurveysExpired">Expires: </span>
         <span>{{survey.expiredAt | amTimeAgo}}</span>
       </ion-col>
-      <ion-col col-6 class="no-padding-l csGray5353 text-right" [style.color]="survey.mainAudienceColor" no-padding>
+      <ion-col col-6 class="no-padding-l text-right" [style.color]="survey.mainAudienceColor" no-padding>
         <ion-icon name="at"></ion-icon>
         <span>{{survey.mainAudienceName }}</span>
       </ion-col>
