--- a/src/pages/management-app/circular/list/list.html
+++ b/src/pages/management-app/circular/list/list.html
@@ -4,13 +4,21 @@
             <b>{{circular.title}}</b>
         </h2>
         <p>Effective Date: {{circular.date}}</p>
-        <div>
-            <ion-icon name="at"></ion-icon>
-            <span>{{circular.mainAudienceName}}</span>
-        </div>
-        <p>Created By: {{circular.employeeUsername}}</p>
+        <ion-grid no-padding>
+            <ion-row no-padding>
+                <ion-col col-6 no-padding>
+                    <ion-icon name="at"></ion-icon>
+                    <span>{{circular.mainAudienceName}}</span>
+                </ion-col>
+                <ion-col col-6 no-padding>
+                    <p>Created By: {{circular.employeeUsername}}</p>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
     </button>
 </ion-list>
+
+
 
 <ion-list class="no-comment" *ngIf="circularList?.length==0">
     <ion-icon name="list-box"></ion-icon>
