--- a/src/custom-components/login/login.html
+++ b/src/custom-components/login/login.html
@@ -1,46 +1,36 @@
 <ion-content class="csLoginScreen">
+  <img class="csCenter" class="csLogo" src="assets/images/logo.png">
+  <div style="overflow:hidden">
+    <ion-segment [(ngModel)]="loginType" color="primary">
+      <ion-segment-button value="student">
+        <p>Student Login</p>
+      </ion-segment-button>
+      <ion-segment-button value="management">
+        <p>Management Login</p>
+      </ion-segment-button>
+    </ion-segment>
+  </div>
 
-    <img class="csCenter" class="csLogo" src="assets/images/logo.png">
-
-<div style="overflow:hidden">
-        <ion-segment [(ngModel)]="loginType" color="primary" >
-                <ion-segment-button value="student" >
-                    <p>Student Login</p>
-                </ion-segment-button>
-                <ion-segment-button value="management">
-                    <p>Management Login</p>
-                </ion-segment-button>
-            </ion-segment>
-</div>
-
-
- 
-
-    <form [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
-        <ion-list class="letter-space">
-
-            <ion-item>
-                <ion-icon name="call" color="primary" item-start></ion-icon>
-                <ion-label stacked>Username</ion-label>
-                <ion-input type="text" formControlName="username" class="csFontColor1 csBold"></ion-input>
-            </ion-item>
-
-            <ion-item>
-                <ion-icon name="md-unlock" color="primary" item-start></ion-icon>
-                <ion-label stacked>Password</ion-label>
-                <ion-input [type]="pswdInputType" formControlName="password" class="csFontColor1 csBold" #password></ion-input>
-                <ion-icon tappable name="{{icon}}" color="primary" item-end (click)="showPassword(password)"></ion-icon>
-            </ion-item>
-
-        </ion-list>
-
-        <button ion-button full type="submit" [disabled]="!loginForm.valid">Login</button>
-        <button type="button" small ion-button clear (click)="openFrgtPswdModal()">Forgot Password?</button>
-
-    </form>
-
+  <form [formGroup]="loginForm" (ngSubmit)="login()" novalidate>
+    <ion-list class="letter-space">
+      <ion-item>
+        <ion-icon name="call" color="primary" item-start></ion-icon>
+        <ion-label stacked>Username</ion-label>
+        <ion-input type="text" formControlName="username" class="csFontColor1 csBold"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-icon name="md-unlock" color="primary" item-start></ion-icon>
+        <ion-label stacked>Password</ion-label>
+        <ion-input [type]="pswdInputType" formControlName="password" class="csFontColor1 csBold" #password></ion-input>
+        <ion-icon tappable name="{{icon}}" color="primary" item-end (click)="showPassword(password)"></ion-icon>
+      </ion-item>
+    </ion-list>
+    <button ion-button full type="submit" [disabled]="!loginForm.valid">Login</button>
+    <button type="button" small ion-button clear (click)="openFrgtPswdModal()">Forgot Password?</button>
+  </form>
 </ion-content>
 
 <ion-footer text-center>
-    Powered by <b> NxtLife Technologies</b>
+  Powered by
+  <b> NxtLife Technologies</b>
 </ion-footer>
